5.13.0
加入对 NeoKeyManager （NKM）中心化序列号管理器的支持，NeoProxyServer 从这个版本之后将支持**节点化**部署